# Seahug

./: README.md
agda/parser/: Cat.agda  Parser.agda
haskell/DamasMilner/: DamasMilner.cabal  README.md
haskell/DamasMilner/src/: Main.hs
haskell/parser/: parser.cabal  stack.yaml
haskell/parser/src/: Cat.hs  Main.hs  Meetup.hs  Meetup2.hs  Parser.hs  TF.hs
